Removed deprecated usage.